# progress

./: .gitignore  MANIFEST.in  README.md  actiondraw.py  bump_version.py  conftest.py  debug_load.py  demo.progress  eff_diceware.py  markdown_note_editor.py  progress_crypto.py  progress_list.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_tests.sh  task_model.py  test.py  test_actiondraw.py  test_chart.py  test_encryption.py  test_goal_tabs.progress  test_markdown_image_paster.py  test_markdown_preview_formatter.py  test_packaging.py  test_password_issue.py  test_progress_list.py  validate_actiondraw.py
.github/: copilot-instructions.md
.github/workflows/: build-deb.yml  ci.yml  release.yml
actiondraw/: __init__.py  __main__.py  clipboard.py  constants.py  drawing.py  layout.py  markdown_image_paster.py  markdown_note_editor_window.py  markdown_note_manager.py  markdown_note_qml.py  markdown_note_tabs.py  markdown_pdf_exporter.py  markdown_preview_formatter.py  markdown_syntax_highlighter.py  markdown_tab_clipboard.py  mcp_server.py  model.py  qml.py  subdiagram.py  types.py  ui.py
actiondraw/priorityplot/: __init__.py  __main__.py  app.py  model.py
actiondraw/qml_ui/: ActionDrawWindow.qml  HierarchyWindow.qml  KanbanWindow.qml  MarkdownNoteEditorWindow.qml  PriorityPlotWindow.qml
actiondraw/qml_ui/components/: ActionDialogs.qml  ActionMenuBar.qml  MarkdownEditorPane.qml  PriorityPlotCanvas.qml  ProgressStatsRow.qml  SidebarTabs.qml  ToolbarRow.qml
docs/: index.html
packaging/: actiondraw.desktop
tests/: conftest.py  proof_derive_then_forget.py  test_actiondraw.py  test_docs_assets.py  test_eff_diceware.py  test_markdown_image_paster.py  test_markdown_pdf_exporter.py  test_markdown_preview_formatter.py  test_markdown_syntax_highlighter.py  test_mcp_server.py  test_packaging.py  test_passphrase_crack_time.py  test_progress_crypto.py  test_progress_list.py  test_save_load.py  test_scrub_project_data.py
tools/: build_deb.sh  test_build_deb_workflow.sh  verify_default_view.py
