[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actiondraw"
version = "0.1.6"
description = "A diagramming module built with PySide6 and QML"
readme = "README.md"
authors = [
    {name = "oyvinrog"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
]
keywords = ["diagram", "drawing", "canvas", "pyside6", "qml", "visualization"]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.6,<7",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[project.urls]
Homepage = "https://github.com/oyvinrog/progress"
Repository = "https://github.com/oyvinrog/progress"
Issues = "https://github.com/oyvinrog/progress/issues"

[project.scripts]
actiondraw = "actiondraw:main"

[tool.setuptools]
packages = ["actiondraw"]
py-modules = ["task_model", "markdown_note_editor"]

[tool.setuptools.package-data]
actiondraw = ["qml_ui/**/*.qml"]
